<resources>

    MainActivity
    ----------------------------------------------------------------------------------------------------
    <string name="app_name">Fitee</string>
    <string name="welcome_fitee">모든 음성을 Fitee로</string>
    <string name="start_kakao">카카오톡으로 시작하기</string>
    <string name="sign_up">회원가입</string>
    <string name="login">로그인</string>
    <string name="slash">  /  </string>

    signupfragment
    ----------------------------------------------------------------------------------------------------
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="name">이름</string>
    <string name="age">나이</string>
    <string name="phone_number">전화번호</string>
    <string name="part">파트</string>
    <string name="sex">성별</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="trainer">트레이너</string>
    <string name="user">회원</string>


</resources>