<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpFragment">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:orientation="vertical">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginTop="10dp"
          android:text="@string/email"
          android:textColor="@color/gray"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="40dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:background="@drawable/sign_up_background"
          android:importantForAutofill="no" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginTop="10dp"
          android:text="@string/password"
          android:textColor="@color/gray"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="40dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:background="@drawable/sign_up_background"
          android:importantForAutofill="no" />


      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginTop="10dp"
          android:text="@string/name"
          android:textColor="@color/gray"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="40dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:background="@drawable/sign_up_background"
          android:importantForAutofill="no" />


      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginTop="10dp"
          android:text="@string/age"
          android:textColor="@color/gray"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="40dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:background="@drawable/sign_up_background"
          android:importantForAutofill="no" />


      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginTop="10dp"
          android:text="@string/phone_number"
          android:textColor="@color/gray"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="40dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:background="@drawable/sign_up_background"
          android:importantForAutofill="no" />

  </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/sex"
            android:textColor="@color/gray"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="116dp"
            android:layout_height="40dp"
            android:background="@drawable/part_selector_button"
            android:textColor="@drawable/selector_text_color"
            android:text="@string/male"
            android:textStyle="bold"
            android:layout_marginRight="40dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="116dp"
            android:layout_height="40dp"
            android:text="@string/female"
            android:textColor="@drawable/selector_text_color"
            android:textStyle="bold"
            android:background="@drawable/part_selector_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/part"
            android:textColor="@color/gray"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="116dp"
            android:layout_height="40dp"
            android:background="@drawable/part_selector_button"
            android:text="@string/trainer"
            android:textColor="@drawable/selector_text_color"
            android:textStyle="bold"
            android:layout_marginRight="40dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="116dp"
            android:layout_height="40dp"
            android:text="@string/user"
            android:textColor="@drawable/selector_text_color"
            android:textStyle="bold"
            android:background="@drawable/part_selector_button" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/sign_up_button"/>


</LinearLayout>